fixing column alignment

--- a/src/components/links/links.component.scss
+++ b/src/components/links/links.component.scss
@@ -2,6 +2,10 @@
 
 .links-component {
 
+    .column-wrapper {
+        justify-content: space-between;
+    }
+
     .column {
         min-width: calc(25% - 15px);
         margin-right: 15px;
